add jsonp request to local json file to grab spanish to english info. also add initial model and collection setup.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <script src="/flashcard.js"></script>
 </head>
 <body>
-<div id="spa">
-
-</div>
+  <header>
+    <h1> Test Your Spanish Skillz!! </h1>
+  </header>
+  <div id="spa">
+  
+  </div>
 </body>
 </html>
